using ui-router to better support angular

--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -25,5 +25,5 @@
     <option value="<%=locale%>" <%=__.defaultLocale == locale ? 'selected' : ''%>><%=locale%></option>
     <% }); %>
 </select>-->
-<div class="container" ui-view="main">
+<div ui-view="main">
 </div><!-- /.container -->
