--- a/assets/src/app/auth/login.tpl.html
+++ b/assets/src/app/auth/login.tpl.html
@@ -46,6 +46,7 @@
                 <h3>Invalid login</h3>
                 <p>Enter <strong>demo</strong>/<strong>demo</strong> as login and password.</p>
             </div>
+            <!--<form method="post" role="form" id="form_login">-->
             <form action="/api/session/login" method="post" role="form" id="form-signin">
                 <div class="form-group">
                     <div class="input-group">
@@ -93,7 +94,7 @@
                     </button>
                 </div> -->
                 <div class="form-group">
-                    <input type="hidden" name="_csrf" value="<%= _csrf %>" />
+                    <input type="hidden" name="_csrf" value="$('meta[name=csrf-token]').attr('content')" />
                 </div>
             </form>
             <div class="login-bottom-links">
