--- a/assets/src/app/auth/register.tpl.html
+++ b/assets/src/app/auth/register.tpl.html
@@ -96,7 +96,7 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <input type="hidden" name="_csrf" value="<%= _csrf %>" />
+                                <input type="hidden" name="_csrf" value="csrf" />
                             </div>
                             <div class="form-group">
                                 <button type="submit" class="btn btn-success btn-block btn-login">
