major refactor, using gulp-webserver for additional web server for angular app.

--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -5,6 +5,8 @@
 
     <p>Angular test Page
         <br><br>If you're seeing this page, then angular is working </p>
+    <a class="btn btn-success btn-lg" ui-sref="members.users">Users</a>
+    <a class="btn btn-success btn-lg" ui-sref="members.dash">Members</a>
 
     <div class="row">
         <div class="col-md-4  col-lg-4 col-lg-offset-2 pull-right">
